<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/about"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/back_icon"
            android:layout_alignBottom="@+id/back_icon"
            android:layout_marginStart="282dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/back_icon"
            android:src="@drawable/ic_about" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:src="@mipmap/ic_icon" />

        <TextView
            android:id="@+id/worktodoText"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignTop="@+id/icon"
            android:layout_toEndOf="@+id/icon"
            android:fontFamily="@font/font_bold"
            android:padding="10dp"
            android:text="@string/work_to_do"
            android:textSize="40sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/worktodoText"
            android:layout_alignEnd="@+id/taskbtn"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:padding="35dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_border"
            android:hint="@string/add_task"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/taskbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText"
            android:layout_toEndOf="@+id/editText"
            android:background="@color/button_color"
            android:src="@mipmap/ic_add"
            android:text="@string/add_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </RelativeLayout>
</ScrollView>